clusters/protocol-nj/testnet-beta/fullnodes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testnet-beta-fullnodes
  namespace: testnet-beta
  labels:
    app.kubernetes.io/name: poktrolld
    app.kubernetes.io/managed-by: manual
    pokt.network/purpose: full-nodes-service
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 9090
      protocol: TCP
      targetPort: grpc
    - name: rpc
      port: 26657
      protocol: TCP
      targetPort: rpc
    - name: api
      port: 1317
      protocol: TCP
      targetPort: api
  selector:
    fullnodes-service-include: "true"
  sessionAffinity: None
