clusters/protocol-nj/testnet-beta/nginx-evm-response.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: protocol-common
  name: nginx-evm-response
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-evm-response
  template:
    metadata:
      labels:
        app: nginx-evm-response
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-evm-response-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: protocol-common
  name: nginx-evm-response
spec:
  selector:
    app: nginx-evm-response
  ports:
    - protocol: TCP
      name: rpc
      port: 8547
      targetPort: 80
