clusters/protocol-nj/testnet-beta/rpc-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: testnet-beta-fullnodes
  namespace: testnet-beta
  labels:
    app.kubernetes.io/name: poktrolld
    app.kubernetes.io/managed-by: manual
    pokt.network/purpose: full-nodes-service
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 9090
      protocol: TCP
      targetPort: grpc
    - name: rpc
      port: 26657
      protocol: TCP
      targetPort: rpc
    - name: api
      port: 1317
      protocol: TCP
      targetPort: api
  selector:
    fullnodes-service-include: "true"
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testnet-beta-fullnodes-rpc
  namespace: testnet-beta
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "2m"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "4m"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "4m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
spec:
  tls:
    - secretName: "beta-wildcard-tls"
      hosts:
        - shannon-testnet-grove-rpc.beta.poktroll.com
  rules:
    - host: shannon-testnet-grove-rpc.beta.poktroll.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testnet-beta-fullnodes
                port:
                  name: rpc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testnet-beta-fullnodes-grpc
  namespace: testnet-beta
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
    - secretName: "beta-wildcard-tls"
      hosts:
        - shannon-testnet-grove-grpc.beta.poktroll.com
  rules:
    - host: shannon-testnet-grove-grpc.beta.poktroll.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testnet-beta-fullnodes
                port:
                  name: grpc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testnet-beta-fullnodes-api
  namespace: testnet-beta
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "2m"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "4m"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "4m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
spec:
  tls:
    - secretName: "beta-wildcard-tls"
      hosts:
        - shannon-testnet-grove-api.beta.poktroll.com
  rules:
    - host: shannon-testnet-grove-api.beta.poktroll.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testnet-beta-fullnodes
                port:
                  name: api
